prevent line overflow

--- a/assets/styles/common/_typography.scss
+++ b/assets/styles/common/_typography.scss
@@ -198,6 +198,7 @@ hr {
 pre {
     padding: 20px 20px 20px 40px;
     display: block;
+    white-space: pre-line;
 }
 
 q {
